# Quantifying-Misalignment-Effects-in-ECC-Non-Timing-Side-Channel-Attacks

./: .gitignore  README.md  benchmark_comparison.py  benchmark_cpa.py  demo_alignment.py  demo_cnn.py  demo_cpa.py  demo_full_benchmark.py  demo_spa.py  pyproject.toml  requirements.txt
config/: config.yaml
config/experiment/: base.yaml
report/: main.tex
src/attacks/: cnn.py  cpa.py  deep_learning.py  spa.py
src/generation/: generator.py  noise.py
src/metrics/: calculator.py  pearson.py  statistics.py
src/utils/: alignment.py  visualization.py
tests/: test_alignment.py  test_cnn.py  test_cpa.py  test_generation.py  test_metrics.py  test_spa.py
