[tool.poetry]
name = "ecc-sca-project"
version = "0.1.0"
description = "Quantifying Misalignment Effects in ECC Non-Timing Side-Channel Attacks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src", from = "ecc_sca_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
hydra-core = "^1.3.0"
torch = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
